--- a/exp_check_pyqt/config/qt_config.json
+++ b/exp_check_pyqt/config/qt_config.json
@@ -1,12 +1,12 @@
 {
-    "Description": "A skeleton sysroot specification.",
+    "Description": "A spec for android/linux build.",
 
     "qt5": {
-        "android-32#qt_dir":        "android_armv7",
-        "android-64#qt_dir":        "android_arm64_v8a",
+        "android-32#qt_dir":        "/home/mer/Qt/5.12.2/android_armv7",
+        "android-64#qt_dir":        "/home/mer/Qt/5.12.2/android_arm64_v8a",
         "ios#qt_dir":               "ios",
 
-        "linux|macos|win#source":   "qt-everywhere-src-5.12.2.tar.xz",
+        "linux|macos|win#source":   "../qt-everywhere-src-*.tar.xz",
         "edition":                  "opensource",
 
         "android|linux#ssl":        "openssl-runtime",
@@ -32,12 +32,12 @@
     "python": {
         "build_host_from_source":   false,
         "build_target_from_source": true,
-        "source":                   "Python-3.6.8.tar.xz"
+        "source":                   "../Python-*.tar.xz"
     },
 
     "sip": {
         "module_name":  "PyQt5.sip",
-        "source":       "sip-4.19.15.tar.gz"
+        "source":       "../sip-4.19.15.tar.gz"
     },
 
     "pyqt5": {
@@ -73,7 +73,7 @@
                 "QtWinExtras"
         ],
 
-        "source":                   "PyQt5_*-5.12.1.tar.gz"
+        "source":                   "../PyQt5_*-*.tar.gz"
     }
 
 }
