--- a/cordova/package.json
+++ b/cordova/package.json
@@ -13,17 +13,21 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^9.0.0",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-local-notifications": "^1.0.0",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-dialogs": {}
     },
-    "platforms": [
-      "browser",
-      "android"
-    ]
+    "platforms": []
+  },
+  "dependencies": {
+    "browser-sync": "^2.26.12",
+    "cheerio": "^1.0.0-rc.3",
+    "csp-parse": "0.0.2"
   }
 }
